--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     
     <style>
       .header {
-      background-color: mediumseagreen;
-      width: 300px;
-      border: 15px solid lightgreen;
-      padding: 50px;
-      margin: 20px;
+      background-color: green;
+      border: 15px solid chartreuse;
       }
       .h2 header {
       text-align: center;
