--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <style>
       .header {
       background-color: green;
-      border: 15px solid chartreuse;
+      border: 15px solid greenyellow;
+      text-align: center;
       }
       .h2 header {
       text-align: center;
+      color: white;
       }
     </style>
   </head>
