--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <style>
       .header {
       background-color: green;
-      border: 15px solid greenyellow;
+      border: 15px solid limegreen;
       text-align: center;
+      text-color: white;
       }
       .h2 header {
       text-align: center;
-      color: white;
+      text-color: white;
       }
     </style>
   </head>
