--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <style>
       .header {
       background-color: green;
-      border: 15px solid limegreen;
+      border: 15px solid lime;
       text-align: center;
       text-color: white;
       }
-      .h2 header {
+      .h2 {
       text-align: center;
       text-color: white;
+      text-size: 10px;
       }
     </style>
   </head>
@@ -21,6 +22,7 @@
     <!--Header-->
     <div class="header">
       <h2>Selamat Datang ke Sistem Laundry</h2>
+      
     <!--Menu-->
     
     <!--Content-->
