--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       text-align: center;
       text-color: white;
       }
-      .h2 {
+      h2 {
       text-align: center;
-      text-color: white;
+      color: white;
       text-size: 10px;
       }
     </style>
