--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       h2 {
       text-align: center;
       color: white;
-      text-size: 10px;
+      font-size: 10px;
       }
     </style>
   </head>
