--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <style>
       .header {
       background-color: green;
-      border: 15px solid lime;
+      border: 10px solid yellowgreen;
       text-align: center;
       text-color: white;
       }
       h2 {
       text-align: center;
       color: white;
-      font-size: 35px;
+      font-size: 34px;
       }
     </style>
   </head>
