--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     
     <style>
       .header {
+      width: 100%;
       background-color: green;
       border: 15px solid yellowgreen;
       text-align: center;
