--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style>
       .header {
       width: 100%;
+      margin: 100%;
       background-color: green;
       border: 15px solid yellowgreen;
       text-align: center;
