--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     
     <style>
       .header {
-      width: 200%;
+      width: 100%;
+      padding: 100%;
       background-color: green;
       border: 15px solid yellowgreen;
       text-align: center;
