--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     
     <style>
       .header {
+      overflow: hidden;
       background-color: green;
       border: 13px solid yellowgreen;
       text-align: center;
