--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <style>
       .header {
       overflow: hidden;
+      margin-top: 5px;
+      margin-bottom: 5px;
+      padding-top: 5px;
       background-color: green;
       border: 13px solid yellowgreen;
       text-align: center;
