--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!--Header-->
     <div class="header">
       <h2>Selamat Datang ke Sistem Laundry</h2>
+    </div>
       
     <!--Menu-->
     <div class="menu">
