--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
       margin-top: 5px;
       margin-bottom: 5px;
       padding-top: 5px;
-      background-color: grey;
+      }
+      .menu ul {
+      list-style-type: none;
+      margin: auto;
+      overflow: hidden;
+      }
+      .menu li {
+      float: left;
+      }
+      .menu a {
+      text-decoration: none;
+      display: block;
+      padding: 15px;
+      }
+      .menu li:hover {
+      background-color: antiquewhite;
       }
     </style>
   </head>
