--- a/index.html
+++ b/index.html
@@ -18,22 +18,30 @@
       margin-top: 5px;
       margin-bottom: 5px;
       padding-top: 5px;
+      color: black;
       }
       .menu ul {
       list-style-type: none;
       margin: auto;
       overflow: hidden;
+      color: black;
       }
       .menu li {
       float: left;
+      color: black;
       }
       .menu a {
       text-decoration: none;
       display: block;
       padding: 15px;
+      color: black;
       }
       .menu li:hover {
       background-color: antiquewhite;
+      color: black;
+      }
+      .menu a:hover {
+      color: black;
       }
     </style>
   </head>
