--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
     <!--Menu-->
     <div class="menu">
       <ul>
-        <li><a href="#">BERITA</a></li>
-        <li><a href="#">SUKAN</a></li>
-        <li><a href="#">DUNIA</a></li>
-        <li><a href="#">HIBURAN</a></li>
+        <li><a href="index.html">Utama</a></li>
+        <li><a href="jenis.html">Jenis Laundry</a></li>
+        <li><a href="laporan.html">Laporan</a></li>
       </ul>
       </div>
       
