--- a/index.html
+++ b/index.html
@@ -18,22 +18,26 @@
       margin-top: 5px;
       margin-bottom: 5px;
       padding-top: 5px;
+      background-color: whitesmoke;
       color: black;
       }
       .menu ul {
       list-style-type: none;
       margin: auto;
       overflow: hidden;
+      background-color: whitesmoke;
       color: black;
       }
       .menu li {
       float: left;
+      background-color: whitesmoke;
       color: black;
       }
       .menu a {
       text-decoration: none;
       display: block;
       padding: 15px;
+      background-color: whitesmoke;
       color: black;
       }
       .menu li:hover {
@@ -42,6 +46,7 @@
       }
       .menu a:hover {
       color: black;
+      font-weight: bold;
       }
     </style>
   </head>
