--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       .menu ul {
       list-style-type: none;
       margin: auto;
+      margin-left: 5px;
       overflow: hidden;
       color: black;
       }
