--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     
     <style>
       .header {
+      overflow: hidden;
       background-color: green;
       border: 10px solid yellowgreen;
       text-align: center;
@@ -17,6 +18,8 @@
       .menu {
       background-color: whitesmoke;
       color: black;
+      overflow: hidden;
+      float: left;
       }
       .menu ul {
       list-style-type: none;
