--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       .menu {
       background-color: whitesmoke;
       color: black;
-      overflow: hidden;
       float: left;
       }
       .menu ul {
@@ -33,16 +32,19 @@
       color: black;
       }
       .menu a {
+      float: left;
       text-decoration: none;
       display: block;
       padding: 15px;
       color: black;
       }
       .menu li:hover {
+      float: left;
       background-color: antiquewhite;
       color: black;
       }
       .menu a:hover {
+      float: left;
       color: black;
       font-weight: bold;
       }
