--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       .menu {
       background-color: whitesmoke;
       color: black;
+      margin: auto;
       }
       .menu ul {
       list-style-type: none;
