--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       .menu a {
       text-decoration: none;
       display: block;
+      margin: auto;
       padding: 15px;
       color: black;
       }
