--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       .menu ul {
       list-style-type: none;
       overflow: hidden;
+      margin: auto;
+      margin-left: 10px;
       color: black;
       }
       .menu li {
@@ -31,7 +33,6 @@
       .menu a {
       text-decoration: none;
       display: block;
-      margin: auto;
       padding: 15px;
       color: black;
       }
