--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       text-color: white;
       }
       h2 {
+      overflow: hidden;
       text-align: center;
       color: white;
       font-size: 30px;
@@ -25,6 +26,8 @@
       margin: auto;
       margin-left: 10px;
       color: black;
+      padding-top: 5px;
+      padding-left: 5px;
       }
       .menu li {
       float: left;
