--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       margin: auto;
       margin-left: 10px;
       color: black;
-      padding-top: 10px;
-      padding-left: 10px;
+      padding-top: 5px;
+      padding-bottom: 5px;
       }
       .menu li {
       float: left;
