--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       margin-left: 10px;
       color: black;
       padding-top: 5px;
-      padding-bottom: 5px;
+      padding-left: 5px;
       }
       .menu li {
       float: left;
