--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       .header {
       overflow: hidden;
       background-color: green;
-      border: 20px solid yellowgreen;
+      border: 10px solid yellowgreen;
       text-align: center;
       text-color: white;
       }
@@ -15,6 +15,7 @@
       text-align: center;
       color: white;
       font-size: 30px;
+      height: 25px;
       }
       .menu {
       background-color: whitesmoke;
