--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       text-align: center;
       color: white;
       font-size: 30px;
-      height: 100px;
+      padding: auto;
       }
       .menu {
       background-color: whitesmoke;
