--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       color: white;
       font-size: 30px;
       padding: auto;
+      width: 50px;
       }
       .menu {
       background-color: whitesmoke;
