--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       text-align: center;
       padding: 5px;
       background-color: yellowgreen;
+      border: 5px solid green;
       color: black;
       }
     </style>
