--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       color: white;
       font-size: 30px;
       padding: auto;
+      padding-top: 5px;
+      padding-bottom: 5px;
       }
       .menu {
       background-color: whitesmoke;
@@ -55,7 +57,7 @@
       text-align: center;
       padding: 5px;
       background-color: yellowgreen;
-      border: 5px solid green;
+      border: 1px solid green;
       color: black;
       }
     </style>
