--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       .menu {
       background-color: whitesmoke;
       color: black;
+      padding-top: 5px;
+      padding-left: 5px;
       }
       .menu ul {
       list-style-type: none;
