--- a/laporan.html
+++ b/laporan.html
@@ -54,6 +54,31 @@
       color: black;
       font-weight: bold;
       }
+      .setting {
+      width: 30%;
+      margin: auto;
+      background-color: green; 
+      border: 2px solid yellowgreen;
+      margin-top: 10px;
+      float: left;
+      margin-left: 10%;
+      }
+      ul {
+      list-style-type: none;
+      padding-left: 5px;
+      margin: auto;
+      margin-left: 0px;
+      }
+      li {
+      padding: 10px;
+      }
+      a {
+      text-decoration: none;
+      display: block;
+      }
+      li:hover {
+      background-color: wheat;
+      }
       .kaki {
       text-align: center;
       padding: 5px;
@@ -81,6 +106,11 @@
       </div>
       
     <!--Content-->
+    <div class="setting">
+      <ul>
+        <li><a href="tukar.html">Tukar Kata Laluan</a></li>
+      </ul>
+    </div>
     
     <!--Footer-->
     <div class="kaki">
