--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       color: black;
       font-weight: bold;
       }
+      .h3 {
+      font-size: 10px;
+      }
       .setting {
       width: 30%;
       margin: auto;
@@ -107,9 +110,11 @@
       
     <!--Content-->
     <div class="setting">
+      <h3>Setting</h3>
       <ul>
         <li><a href="tukar.html">Tukar Kata Laluan</a></li>
       </ul>
+    </div>
     </div>
     
     <!--Footer-->
