--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
       font-size: 10px;
       }
       .setting {
+      width: 50px;
       margin: auto;
-      background-color: green; 
+      background-color: seagreen; 
       border: 2px solid yellowgreen;
       float: left;
       }
