--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       font-size: 10px;
       }
       .setting {
-      width: 50px;
+      width: 50%;
       margin: auto;
       background-color: seagreen; 
       border: 2px solid yellowgreen;
