--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
       }
       .h3 {
       font-size: 10px;
+      text-align: center;
       }
       .setting {
-      width: 50%;
+      width: 30%;
       margin: auto;
       background-color: seagreen; 
       border: 2px solid yellowgreen;
       float: left;
+      padding-top: 5px;
+      text-align: center;
       }
       ul {
       list-style-type: none;
