--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       border: 2px solid yellowgreen;
       float: left;
       padding-top: 5px;
+      padding-bottom: 40px;
       text-align: center;
       }
       ul {
