--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
       font-weight: bold;
       }
       .h3 {
-      font-size: 10px;
+      font-size: 6px;
       text-align: center;
+      padding-bottom: 5px;
       }
       .setting {
       width: 30%;
@@ -65,7 +66,7 @@
       border: 2px solid yellowgreen;
       float: left;
       padding-top: 5px;
-      padding-bottom: 40px;
+      padding-bottom: 80px;
       text-align: center;
       }
       ul {
@@ -104,7 +105,7 @@
       
     <!--Content-->
     <div class="setting">
-      <h3>Setting</h3>
+      <font>Setting</font>
       <ul>
         <li><a href="tukar.html">Tukar Kata Laluan</a></li>
       </ul>
