--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
       padding-top: 3px;
       }
       .setting {
-      width: 30%;
+      width: 28%;
       margin: auto;
-      background-color: seagreen; 
-      border: 2px solid yellowgreen;
-      float: left;
+      padding-top: 10px;
       text-align: center;
+      border-style: solid;
+      border-color: yellowgreen;
+      background-color: rgb(0,128,85);
+      float: left;
+      overflow: hidden;
+      height: 420px;
+      padding-bottom: px;
       }
       ul {
       list-style-type: none;
