--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
       }
       a {
       text-decoration: none;
-      display: block;
+			display: block;
+			color: rebeccapurple;
       }
       li:hover {
       background-color: wheat;
