--- a/index.html
+++ b/index.html
@@ -89,36 +89,15 @@
       background-color: wheat;
       }
       .kandungan {
-      text-align: center;
-      }
-      a {
-      margin: 0;
-      }
-      .table1 {
-      border: solid;
-      width: 30%;
+      width: 65%;
+      height: 400px;
       margin: auto;
-      margin-bottom: 10px;
-      padding-bottom: 10px;
+      border-style: solid;
+      float: right;
+      margin-right: 0;
+      text-align: center;
+      padding-bottom: 15px;
       padding-top: 10px;
-      }
-      a {
-      margin: 0;
-      }
-      .p1 {
-      text-align: center;
-      padding-bottom: 20px;
-      }
-      .p2 {
-      text-align: center;
-      padding-bottom: 20px;
-      }
-      .p3 {
-      text-align: center;
-      }
-      .masuk {
-      margin-right: 5px;
-      text-align: center;
       }
     </style>
   </head>
@@ -148,24 +127,18 @@
     </div>
 	  
      <div class="kandungan">
-       <table class="table1">
-	<tr class="p1">
-         <h3>Log In</h3>
-           <td>
-            <p>Username <input type="text"></p>
-          </td>
-        </tr>
-        <tr class="p2">
-          <td>
-            <p>Passwords <input type="password"></p>
-          </td>
-        </tr>
-        <tr class="p3">
-          <td> <input type="submit" value="Login" class="masuk">
-            <input type="reset" class="padam"></td>
-        </tr>
-      </table>
-    </div>
+       <h3>Login</h3>
+	 <from action="">
+	   Username
+	  <input type="text" name="" id="">
+	  <br>
+	  Passwords
+	  <input type="password">
+	  <br>
+	  <input type="button" value="Login">
+	  <input type="reset">
+	 </from>
+	</div>
 	     
     <!--Footer-->
     
