--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
       padding-bottom: 15px;
       padding-top: 10px;
       }
+      .kaki {
+      border: solid;
+      text-align: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      margin-top; 10px;
+      border-color: green;
+      background-color: yellowgreen;  
+      }
     </style>
   </head>
   
@@ -141,6 +150,9 @@
 	</div>
 	     
     <!--Footer-->
-    
+    <div class="kaki">
+      <font>Copyright &copy; Syarikat Laundry, 2021 </font>
+    </div>
+	  
   </body>
 </html>
