--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       padding-bottom: 15px;
       padding-top: 10px;
       }
-      .kaki {
+      kaki {
       border: solid;
       text-align: center;
       padding-top: 10px;
@@ -146,8 +146,9 @@
 	  <br>
 	  <input type="button" value="Login">
 	  <input type="reset">
-	 </from>
-	</div>
+	     </from>
+	  </div>
+	  </div>
 	     
     <!--Footer-->
     <div class="kaki">
