--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       }
       .kandungan {
       width: 65%;
-      height: 400px;
+      height: 350px;
       margin: auto;
       border-style: solid;
       float: right;
@@ -99,7 +99,7 @@
       padding-bottom: 15px;
       padding-top: 10px;
       }
-      kaki {
+      .kaki {
       border: solid;
       text-align: center;
       padding-top: 10px;
