--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
       padding-top: 10px;
       }
       .kaki {
-      border: solid;
       text-align: center;
-      border-color: green;
-      background-color: yellowgreen;  
+      padding-top: 10px;
+      padding-bottom: 10px;
+      margin-top; 10px;
+      background-color: yellowgreen;
+      border: 3px solid green;
       }
     </style>
   </head>
@@ -126,24 +128,24 @@
       
     <!--Content-->
     <div class="setting">
-      <font>Setting</font>
+	    <font>Setting</font>
       <ul>
-        <li><a href="tukar.html">Tukar Kata Laluan</a></li>
-      </ul>
+	      <li><a href="tukar.html">Tukar Kata Laluan</a></li>
+	    </ul>
+	  </div>
 	  
      <div class="kandungan">
        <h3>Login</h3>
 	 <from action="">
 	   Username
 	  <input type="text" name="" id="">
-	  <br>
+            <br></br>
 	  Passwords
 	  <input type="password">
-	  <br>
+	    <br></br>
 	  <input type="button" value="Login">
 	  <input type="reset">
 	     </from>
-	  </div>
 	  </div>
 	     
     <!--Footer-->
