--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       .menu a {
       text-decoration: none;
       display: block;
-      padding: 15px;
+      padding: 20px;
       color: black;
       }
       .menu li:hover {
-      background-color: antiquewhite;
+      background-color: cornsilk;
       color: black;
       }
       .menu a:hover {
