--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
 	  </div>
 	     
     <!--Footer-->
-	  
+      <div class="kaki">
+	<font>Copyright &copy; Syarikat Laundry, 2021 </font>
+      </div>
+
   </body>
 </html>
