--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
       padding-bottom: 15px;
       padding-top: 10px;
       }
+      .kaki {
+      text-align: center;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      background-color: yellowgreen;
+      border: 2px solid green;
+      vertical-align: bottom;
+      }
     </style>
   </head>
   
