--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       padding-bottom: 5px;
       background-color: yellowgreen;
       border: 2px solid green;
-      margin-top: ;
+      margin-top: 0;
       }
     </style>
   </head>
