--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       overflow: hidden;
       margin: auto;
       margin-left: 10px;
+      padding: 0px;
       color: black;
       }
       .menu li {
@@ -94,7 +95,7 @@
       margin-right: 0;
       text-align: center;
       padding-bottom: 15px;
-      padding-top: 10px;
+      padding-top: 15px;
       }
       .kaki {
       text-align: center;
