--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
       padding-top: 15px;
       }
       .kaki {
+      margin: ;
       text-align: center;
-      background-color: yellowgreen;
       border: 2px solid green;
+      background-color: yellowgreen;
+      padding: 10px;
       margin-top: 30%;
       }
     </style>
