--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
       border: 2px solid green;
       background-color: yellowgreen;
       padding: 10px;
+      padding-top: 5px;
+      padding-bottom: 5px;
       margin-top: 30%;
       }
     </style>
