--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
       .menu ul {
       list-style-type: none;
       overflow: hidden;
-      margin: auto;
-      margin-left: 10px;
-      padding: 0px;
-      color: black;
+      margin: 0;
+      padding: 0;
       }
       .menu li {
       float: left;
@@ -43,10 +41,12 @@
       text-decoration: none;
       display: block;
       color: black;
+      padding: 20px;
       }
       .menu li:hover {
       background-color: cornsilk;
       color: black;
+      float: left;
       }
       .menu a:hover {
       color: black;
