--- a/index.html
+++ b/index.html
@@ -134,7 +134,19 @@
 	  </div>
 	  
 	  <div class="kandungan">
-	     
+            <h3>Login</h3>
+		<from action="">
+			Username
+			<input type="text" name="" id="">
+			<br>
+			Passwords
+			<input type="password">
+			<br>
+			<input type="button" value="Login">
+			<input type="reset">
+		</from>
+	</div>
+                 
     <!--Footer-->
       <div class="kaki">
 	<font>Copyright &copy; Syarikat Laundry, 2021 </font>
