--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
       margin: auto;
       padding-top: 10px;
       text-align: center;
-      border-style: solid;
-      border-color: yellowgreen;
-      background-color: rgb(0,128,85);
+      border: 2px solid yellowgreen;
+      background-color: seagreen;
       float: left;
       overflow: hidden;
       height: 400px;
-      padding-bottom: px;
-      }
+      padding-bottom: 0px;
+      }   
       ul {
       list-style-type: none;
       padding-left: 5px;
@@ -86,13 +85,11 @@
       li:hover {
       background-color: wheat;
       }
-      margin-top: 30%;
-      }
       .kandungan {
       width: 65%;
       height: 400px;
       margin: auto;
-      border-style: solid;
+      border: 2px solid;
       float: right;
       margin-right: 0;
       text-align: center;
