--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
       padding-top: 15px;
       }
       .kaki {
-      margin: ;
+      padding: 10px;
       text-align: center;
       border: 2px solid green;
       background-cowidth: 28%;
-      
+	    }
     </style>
   </head>
   
