--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             .verticalmenu a {
                 text-decoration: none;
                 display: block;
+                color: rebeccapurple;
             }
             .verticalmenu li:hover {
                 background-color: wheat;
