--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             .verticalmenu {
                 width: 28%;
                 margin: auto;
-                background-color: rgb(0, 128, 85);
+                background-color: seagreen;
                 padding-top: 10px;
                 float: left;
                 margin-left: 0;
@@ -110,7 +110,7 @@
             <h3>Login</h3>
             <form action="">
                 Username <input type="text" width="100px">
-                <br>Passwords <input type="text">
+                <br>Passwords <input type="password">
                 <br><input type="button" value="Login">
                 <input type="reset" value="Reset">
             </form>
