--- a/jenis.html
+++ b/jenis.html
@@ -37,7 +37,7 @@
             .verticalmenu {
                 width: 28%;
                 margin: auto;
-                background-color: rgb(0, 128, 85);
+                background-color: seagreen;
                 padding-top: 10px;
                 float: left;
                 margin-left: 0;
