--- a/tukar.html
+++ b/tukar.html
@@ -109,8 +109,8 @@
         <div class="kandungan">
             <h3>Tukar Kata Laluan</h3>
             <form action="">
-                Masukkan kata laluan lama <input type="text" width="100px">
-                <br>Masukkan kata laluan baru <input type="text">
+                Masukkan kata laluan lama <input type="password" width="100px">
+                <br>Masukkan kata laluan baru <input type="password">
                 <br><input type="button" value="Simpan">
                 <input type="reset" value="Reset">
             </form>
