--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                 <ul>
                     <li><a href="tukar.html">Tukar Kata Laluan</a></li>
                  </ul>
+                Profil Saya
+                <ul>
+                    <li><a href="profil.html">Profil Saya</a></li>
+                </ul>
+                
             </div>
         <div class="kandungan">
             <h3>Login</h3>
