--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             <div class="verticalmenu">
                 Setting
                 <ul>
-                    <li><a href="tukar.html">Tukar Kata Laluan</a></li>
+                    <li><li><a href="profil.html">Profil Saya</a></li>
                  </ul>
                 <ul>
-                    <li><a href="profil.html">Profil Saya</a></li>
+                    <a href="tukar.html">Tukar Kata Laluan</a></li>
                 </ul>
                 
             </div>
