--- a/index.html
+++ b/index.html
@@ -103,10 +103,8 @@
             <div class="verticalmenu">
                 Setting
                 <ul>
-                    <li><li><a href="profil.html">Profil Saya</a></li>
-                 </ul>
-                <ul>
-                    <a href="tukar.html">Tukar Kata Laluan</a></li>
+                    <li><a href="profil.html">Profil Saya</a></li>
+                    <li><a href="tukar.html">Tukar Kata Laluan</a></li>
                 </ul>
                 
             </div>
