--- a/profil.html
+++ b/profil.html
@@ -112,7 +112,8 @@
         <div class="kandungan">
             <h3>Profil Saya</h3>
 
-          
+            </div>
+            
         <!--FOOTER-->
     <div class="kaki">
         <font>Copyright &copy; Syarikat Laundry, 2021</font>
