--- a/profil.html
+++ b/profil.html
@@ -62,13 +62,10 @@
                 background-color: wheat;
             }
             .kandungan {
-                width: 65%;
-                margin: auto;
-                border: black solid;
-                padding-top: 10px;
-                float: right;
-                margin-right: 0;
-                height: 65%;
+            width: 100px;
+            margin: 10px;
+            padding: 5px;
+            border: solid black;
             }
             .vertical:after {
                 content: "";
@@ -111,7 +108,7 @@
             </div>
         <div class="kandungan">
             <h3>Profil Saya</h3>
-
+             <img src="images/mak esah.jpg">
             </div>
             
         <!--FOOTER-->
