--- a/profil.html
+++ b/profil.html
@@ -66,6 +66,13 @@
             margin: 10px;
             padding: 5px;
             border: solid black;
+            text-align: center;
+            }
+            img {
+            width: 100px;
+            margin: 10px;
+            padding: 5px;
+            border: solid black;
             }
             .vertical:after {
                 content: "";
