--- a/profil.html
+++ b/profil.html
@@ -62,11 +62,14 @@
                 background-color: wheat;
             }
             .kandungan {
-            width: 100px;
-            margin: 10px;
-            padding: 5px;
-            border: solid black;
+            width: 65%;
             text-align: center;
+            margin: auto;
+            border: black solid;
+            padding-top: 10px;
+            float: right;
+            margin-right: 0;
+            height: 65%;
             }
             img {
             width: 100px;
