--- a/profil.html
+++ b/profil.html
@@ -77,12 +77,27 @@
             padding: 5px;
             border: solid black;
             }
-            .vertical:after {
-                content: "";
-                display: table;
-                clear: both;
+            table {
+            font-size; 3mm;
+            border: black solid;
+            width: 80%;
             }
-        .kaki {
+            td {
+            border: black solid;
+            text-align: center;
+            width: 30%;
+            }
+            tr {
+            border: black solid;
+            text-align: center;
+            width: 70%;
+            }
+            .vertical:after {
+            content: "";
+            display: table;
+            clear: both;
+            }
+           .kaki {
             text-align: center;
             background-color: yellowgreen;
             border: green solid;
@@ -119,7 +134,22 @@
         <div class="kandungan">
             <h3>Profil Saya</h3>
              <img src="images/mak esah.jpg">
-            </div>
+              <table class="section_1">
+              <tr>
+               <td>NO PELANGGAN :</td>
+               <td>G416892</td>
+             </tr>
+             <tr>
+              <td>NAMA :</td>
+              <td>Mak Esah</td>
+             </tr>
+             <tr>
+              <td>ALAMAT :</td>
+              <td>No 96, Jln Keluarga 69, Pasir Gudang, Johor</td>
+             </tr>
+           </table>
+          </center>
+         </div>
             
         <!--FOOTER-->
     <div class="kaki">
