--- a/profil.html
+++ b/profil.html
@@ -77,7 +77,7 @@
             padding: 5px;
             border: solid black;
             }
-            table {
+            section_1 {
             font-size; 3mm;
             border: black solid;
             width: 80%;
