--- a/profil.html
+++ b/profil.html
@@ -77,17 +77,17 @@
             padding: 5px;
             border: solid black;
             }
-            section_1 {
+            table {
             font-size; 3mm;
             border: black solid;
             width: 80%;
             }
-            td {
+            section_1 {
             border: black solid;
             text-align: center;
             width: 30%;
             }
-            tr {
+            section_2 {
             border: black solid;
             text-align: center;
             width: 70%;
@@ -136,15 +136,14 @@
              <img src="images/mak esah.jpg">
               <table class="section_1">
               <tr>
-               <td>NO PELANGGAN :</td>
-               <td>G416892</td>
+               <td>NO PELANGGAN: </td>
+               <td>NAMA: </td>
+               <td>ALAMAT: </td>
              </tr>
+             <table class="section_2">
              <tr>
-              <td>NAMA :</td>
+              <td>G416892</td>
               <td>Mak Esah</td>
-             </tr>
-             <tr>
-              <td>ALAMAT :</td>
               <td>No 96, Jln Keluarga 69, Pasir Gudang, Johor</td>
              </tr>
            </table>
