--- a/profil.html
+++ b/profil.html
@@ -77,10 +77,10 @@
             padding: 5px;
             border: solid black;
             }
-            table {
-            font-size; 3mm;
-            border: black solid;
-            width: 80%;
+            td, th {
+            font-size: 3mm;
+            border: black solid 2px;
+            text-align: center;
             }
             .vertical:after {
             content: "";
