--- a/profil.html
+++ b/profil.html
@@ -77,10 +77,18 @@
             padding: 5px;
             border: solid black;
             }
-            td, th {
-            font-size: 3mm;
-            border: black solid 2px;
-            text-align: center;
+            table {
+            border-style: solid;
+            border-width: 2;
+            width: 30%;
+            background-color: whitesmoke;
+             }
+             .section_1 {
+             border-width: 2;
+             width: 70%;
+             }
+            td {
+            border-style: solid;
             }
             .vertical:after {
             content: "";
