--- a/profil.html
+++ b/profil.html
@@ -78,16 +78,19 @@
             border: solid black;
             }
             table {
+            font-size: 3mm;
             border-style: solid;
             border-width: 2;
             width: 30%;
             background-color: whitesmoke;
              }
              .section_1 {
+             font-size; 3mm;
              border-width: 2;
              width: 70%;
              }
             td {
+            font-size; 3mm;
             border-style: solid;
             }
             .vertical:after {
