--- a/profil.html
+++ b/profil.html
@@ -79,16 +79,17 @@
             }
             table {
             font-size: 3mm;
+            margin-right: 0px;
             border-style: solid;
             border-width: 2;
             width: 30%;
-            background-color: whitesmoke;
-             }
-             .section_1 {
-             font-size; 3mm;
-             border-width: 2;
-             width: 70%;
-             }
+            background-color: black;
+            }
+            .section_1 {
+            font-size; 3mm;
+            border-width: 2;
+            width: 70%;
+            }
             td {
             font-size; 3mm;
             border-style: solid;
