--- a/profil.html
+++ b/profil.html
@@ -75,15 +75,14 @@
             width: 100px;
             margin: 10px;
             padding: 5px;
-            border: solid black;
+            border: black solid;
             }
             table {
             font-size: 3mm;
             margin-right: 0px;
-            border-style: solid;
+            border: black solid;
             border-width: 2;
             width: 30%;
-            background-color: black;
             }
             .section_1 {
             font-size; 3mm;
