--- a/profil.html
+++ b/profil.html
@@ -83,6 +83,7 @@
             border: black solid;
             border-width: 2;
             width: 30%;
+            vertical-align: middle;
             }
             .section_1 {
             font-size; 3mm;
