--- a/profil.html
+++ b/profil.html
@@ -83,12 +83,12 @@
             border: black solid;
             border-width: 2;
             width: 30%;
-            vertical-align: middle;
             }
             .section_1 {
             font-size; 3mm;
             border-width: 2;
             width: 70%;
+            text-align: right;
             }
             td {
             font-size; 3mm;
