--- a/profil.html
+++ b/profil.html
@@ -93,6 +93,7 @@
             td {
             font-size; 3mm;
             border-style: solid;
+            text-align: left;
             }
             .vertical:after {
             content: "";
