--- a/jenis.html
+++ b/jenis.html
@@ -115,8 +115,9 @@
             <div class="verticalmenu">
                 Setting
                 <ul>
+                    <li><a href="profil.html">Profil Saya</a></li>
                     <li><a href="tukar.html">Tukar Kata Laluan</a></li>
-                 </ul>
+                </ul>
             </div>
         <div class="kandungan">
             <h3>Jenis Laundry</h3>
