--- a/laporan.html
+++ b/laporan.html
@@ -114,10 +114,12 @@
         <div class="vertical">
         <div class="verticalmenu">
             Setting
-            <ul>
-                <li><a href="tukar.html">Tukar Kata Laluan</a></li>
-             </ul>
+             <ul>
+              <li><a href="profil.html">Profil Saya</a></li>
+              <li><a href="tukar.html">Tukar Kata Laluan</a></li>
+            </ul>
         </div>
+            
         <div class="kandungan">
             <h3>Laporan</h3>
             <table>
