--- a/tukar.html
+++ b/tukar.html
@@ -103,9 +103,11 @@
             <div class="verticalmenu">
                 Setting
                 <ul>
-                    <li><a href="tukar.html">Tukar Kata Laluan</a></li>
-                 </ul>
+                  <li><a href="profil.html">Profil Saya</a></li>
+                  <li><a href="tukar.html">Tukar Kata Laluan</a></li>
+                </ul>
             </div>
+            
         <div class="kandungan">
             <h3>Tukar Kata Laluan</h3>
             <form action="">
