--- a/profil.html
+++ b/profil.html
@@ -78,6 +78,7 @@
             border: black solid;
             }
             table {
+            vertical-align: middle;
             font-size: 3mm;
             margin-right: 0px;
             border: black solid;
