--- a/profil.html
+++ b/profil.html
@@ -78,7 +78,7 @@
             border: black solid;
             }
             table {
-            vertical-align: middle;
+            text-align: center;
             font-size: 3mm;
             margin-right: 0px;
             border: black solid;
