--- a/profil.html
+++ b/profil.html
@@ -70,7 +70,7 @@
             float: right;
             height: 410px;
             }
-            .profile img {
+            img {
             width: 100px;
             margin: 10px;
             padding: 5px;
@@ -134,8 +134,8 @@
           
         <div class="kandungan">
           <h3>Profil Saya</h3>
+          <img sr="images/mak esah.jpg">
           <div class="profile">
-            <img sr="images/mak esah.jpg">
             <table>
               <body>
                 <tr>
