--- a/profil.html
+++ b/profil.html
@@ -70,7 +70,7 @@
             float: right;
             height: 410px;
             }
-            img {
+            .profile img {
             width: 100px;
             margin: 10px;
             padding: 5px;
@@ -92,11 +92,6 @@
             .profile .title {
             text-align: right;
             width: 30%;
-            }
-            .vertical:after {
-            content: "";
-            display: table;
-            clear: both;
             }
            .kaki {
             text-align: center;
