--- a/profil.html
+++ b/profil.html
@@ -129,8 +129,8 @@
           
         <div class="kandungan">
           <h3>Profil Saya</h3>
-          <img src="images/mak esah.jpg">
           <div class="profile">
+             <img src="images/mak esah.jpg">
             <table>
               <body>
                 <tr>
@@ -154,4 +154,6 @@
     <div class="kaki">
         <font>Copyright &copy; Syarikat Laundry, 2021</font>
     </div>
+            
+   </body>
   </html>
