--- a/profil.html
+++ b/profil.html
@@ -62,12 +62,12 @@
                 background-color: wheat;
             }
             .kandungan {
-            width: 65%;
-            text-align: center;
             margin: auto;
             border: black solid;
-            padding: 10px;
+            width: 65%;
+            text-align: center;
             float: right;
+            padding: 10px;
             height: 410px;
             }
             .profile img {
@@ -132,7 +132,7 @@
           <div class="profile">
              <img src="images/mak esah.jpg">
             <table>
-              <body>
+              <tbody>
                 <tr>
                   <td class="title">NO PELANGGAN :</td>
                   <td>G416892</td>
@@ -145,7 +145,7 @@
                   <td class="title">ALAMAT :</td>
                   <td>No 96, Jln Keluarga 69, Pasir Gudang, Johor</td>
                 </tr>
-              </body>
+              </tbody>
             </table>
           </div>
           </div>
