--- a/profil.html
+++ b/profil.html
@@ -68,7 +68,7 @@
             text-align: center;
             float: right;
             padding: 10px;
-            height: 410px;
+            height: 65%;
             }
             .profile img {
             width: 100px;
