--- a/profil.html
+++ b/profil.html
@@ -67,7 +67,7 @@
             width: 65%;
             text-align: center;
             float: right;
-            padding: 10px;
+            padding-top: 10px;
             height: 65%;
             }
             .profile img {
