--- a/profil.html
+++ b/profil.html
@@ -93,6 +93,12 @@
             text-align: right;
             width: 30%;
             }
+            .kaki {
+            text-align: center;
+            background-color: yellowgreen;
+            border: green solid;
+            padding: 10px;
+            }
         </style>
     </head>
     <body>
@@ -145,7 +151,9 @@
           </div>
           
         <!--FOOTER-->
-
+            <div class="kaki">
+              <font>Copyright &copy; Syarikat Laundry, 2021</font>
+            </div>
             
    </body>
   </html>
