--- a/profil.html
+++ b/profil.html
@@ -70,19 +70,19 @@
             padding-top: 10px;
             height: 65%;
             }
-            .profile img {
+            img {
             width: 100px;
             margin: 10px;
             padding: 5px;
             border: black solid;
             }
-            .profile table {
+            table {
             font-size: 3mm;
             margin-right: 0px;
             border: black solid;
             width: 80%;
             }
-            .profile td {
+            td {
             font-size; 3mm;
             border: black solid;
             text-align: left;
@@ -154,6 +154,6 @@
             <div class="kaki">
               <font>Copyright &copy; Syarikat Laundry, 2021</font>
             </div>
-            
-   </body>
-  </html>
+            </center>
+            </body>
+        </html>
