--- a/profil.html
+++ b/profil.html
@@ -69,6 +69,27 @@
                 margin-right: 0;
                 height: 65%;
             }
+            .img {
+            border; solid;
+            border-color: black;
+            margin: 10px;
+            padding: 10px;
+            width: 100px;
+            }
+            .table {
+            border: solid black;
+            margin: auto;
+            width: 80%;
+            }
+            .td {
+            border: black solid;
+            padding: 2px;
+            width: 70%;
+            }
+            .profile .title {
+            text-align: center;
+            width: 30%;
+            }
             .vertical:after {
                 content: "";
                 display: table;
@@ -102,19 +123,34 @@
             <div class="verticalmenu">
                 Setting
                 <ul>
+                    <li><a href="profil.html">Profil Saya</a></li>
                     <li><a href="tukar.html">Tukar Kata Laluan</a></li>
                  </ul>
             </div>
+            
         <div class="kandungan">
-            <h3>Login</h3>
-            <form action="">
-                Username <input type="text" width="100px">
-                <br>Passwords <input type="text">
-                <br><input type="button" value="Login">
-                <input type="reset" value="Reset">
-            </form>
-        </div>
-    </div>
+            <h3>Profil Saya</h3>
+            <div class="profile">
+                <img src="images/mak esah.jpg">
+                <table>
+                    <body>
+                        <tr>
+                            <td class="title">NO PELANGGAN :</td>
+                            <td>G416892</td>
+                        </tr>
+                        <tr>
+                            <td class="title">NAMA :</td>
+                            <td>Mak Esah</td>
+                        </tr>
+                        <tr>
+                            <td class="title">ALAMAT :</td>
+                            <td>No 96, Jln Keluarga 96, Pasir Gudang. Johor</td>
+                        </tr>
+                    </body>
+                </table>
+            </div>
+          </div>
+            
         <!--FOOTER-->
     <div class="kaki">
         <font>Copyright &copy; Syarikat Laundry, 2021</font>
