--- a/profil.html
+++ b/profil.html
@@ -69,19 +69,19 @@
                 margin-right: 0;
                 height: 65%;
             }
-            .img {
+            img {
             border; solid;
             border-color: black;
             margin: 10px;
-            padding: 10px;
+            padding: 5px;
             width: 100px;
             }
-            .table {
+            table {
             border: solid black;
             margin: auto;
             width: 80%;
             }
-            .td {
+            td {
             border: black solid;
             padding: 2px;
             width: 70%;
