--- a/profil.html
+++ b/profil.html
@@ -70,7 +70,7 @@
                 height: 65%;
             }
             img {
-            border; solid;
+            border: solid;
             border-color: black;
             margin: 10px;
             padding: 5px;
