--- a/profil.html
+++ b/profil.html
@@ -69,25 +69,25 @@
                 margin-right: 0;
                 height: 65%;
             }
-            img {
+            .profile img {
             border: solid;
             border-color: black;
             margin: 10px;
             padding: 5px;
             width: 100px;
             }
-            table {
+            .profile table {
             border: solid black;
             margin: auto;
             width: 80%;
             }
-            td {
+            .profile td {
             border: black solid;
             padding: 2px;
             width: 70%;
             }
             .profile .title {
-            text-align: center;
+            text-align: right;
             width: 30%;
             }
             .vertical:after {
