--- a/profil.html
+++ b/profil.html
@@ -77,11 +77,13 @@
             width: 100px;
             }
             .profile table {
+            font-size: 3mm;
             border: solid black;
             margin: auto;
             width: 80%;
             }
             .profile td {
+            font-size: 3mm;
             border: black solid;
             padding: 2px;
             width: 70%;
@@ -100,6 +102,7 @@
             background-color: yellowgreen;
             border: green solid;
             padding: 10px;
+            margin-top: 20px;
         }
         </style>
     </head>
