--- a/profil.html
+++ b/profil.html
@@ -69,26 +69,26 @@
                 margin-right: 0;
                 height: 65%;
             }
-            profile img {
+            .profile img {
             border: solid;
             border-color: black;
             margin: 10px;
             padding: 5px;
             width: 100px;
             }
-            profile table {
+            .profile table {
             font-size: 3mm;
             border: solid black;
             margin: auto;
             width: 80%;
             }
-            profile td {
+            .profile td {
             font-size: 3mm;
             border: black solid;
             padding: 2px;
             width: 70%;
             }
-            profile .title {
+            .profile .title {
             text-align: right;
             width: 30%;
             }
@@ -97,7 +97,7 @@
                 display: table;
                 clear: both;
             }
-           .kaki {
+           kaki {
             text-align: center;
             background-color: yellowgreen;
             border: green solid;
