--- a/profil.html
+++ b/profil.html
@@ -97,11 +97,12 @@
                 display: table;
                 clear: both;
             }
-           kaki {
+           .kaki {
             text-align: center;
             background-color: yellowgreen;
             border: green solid;
             padding: 10px;
+            margin-top: 0px;
            }
         </style>
     </head>
