--- a/profil.html
+++ b/profil.html
@@ -102,7 +102,7 @@
             background-color: yellowgreen;
             border: green solid;
             padding: 10px;
-            margin-top: 0px;
+            margin-top: 0;
            }
         </style>
     </head>
@@ -153,7 +153,6 @@
                 </table>
             </div>
           </div>
-            
         <!--FOOTER-->
     <div class="kaki">
         <font>Copyright &copy; Syarikat Laundry, 2021</font>
