--- a/profil.html
+++ b/profil.html
@@ -102,7 +102,7 @@
             background-color: yellowgreen;
             border: green solid;
             padding: 10px;
-            margin-top: 0;
+            margin-bottom: 0;
            }
         </style>
     </head>
