--- a/jenis.html
+++ b/jenis.html
@@ -74,6 +74,9 @@
                 border: black solid 2px;
                 width: 80%;
             }
+            img {
+            width: 100px;
+            }
             th {
                 background-color: blue;
                 color: whitesmoke;
@@ -126,6 +129,7 @@
                     <th>Penerangan</th>
                     <th>Harga/kg</th>
                 </tr>
+                <img src="images/selimut.png">
                 <tr>
                     <td>Selimut</td>
                     <td>RM10.00</td>
