--- a/jenis.html
+++ b/jenis.html
@@ -74,9 +74,6 @@
                 border: black solid 2px;
                 width: 80%;
             }
-            img {
-            width: 100px;
-            }
             th {
                 background-color: blue;
                 color: whitesmoke;
@@ -84,6 +81,9 @@
             td, th {
                 border: black solid 2px;
                 text-align: center;
+            }
+            img {
+            width: 100px;
             }
             .vertical:after {
                 content: "";
@@ -130,8 +130,9 @@
                     <th>Harga/kg</th>
                 </tr>
                 <tr>
+                    <td class="title"></td>
                     <img src="images/selimut.png">
-                    <td>Selimut</td>
+                    Selimut
                     <td>RM10.00</td>
                 </tr>
                 <tr>
