--- a/jenis.html
+++ b/jenis.html
@@ -130,17 +130,15 @@
                     <th>Harga/kg</th>
                 </tr>
                 <tr>
-                    <td class="title"></td>
-                    <img src="images/selimut.png">
-                    Selimut
+                    <td><img src="images/selimut.png"><br>Selimut</td>
                     <td>RM10.00</td>
                 </tr>
                 <tr>
-                    <td>Karpet</td>
+                    <td><img src="images/karpet.png"><br>Karpet</td>
                     <td>RM20.00</td>
                 </tr>
                 <tr>
-                    <td>Pakaian</td>
+                    <td><img src="images/pakaian.png"><br>Pakaian</td>
                     <td>RM6.00</td>
                 </tr>
             </table>
