--- a/jenis.html
+++ b/jenis.html
@@ -85,6 +85,11 @@
             img {
             width: 100px;
             }
+            td:hover {
+            width: 150px;
+            font-size: 15mm;
+            font-weight: bold;
+            }
             .vertical:after {
                 content: "";
                 display: table;
