--- a/jenis.html
+++ b/jenis.html
@@ -86,6 +86,13 @@
             width: 100px;
             }
             td:hover {
+            width: 65%;
+            margin: auto;
+            border: black solid;
+            padding-top: 10px;
+            float: right;
+            margin-right: 0;
+            height: 65%;
             width: 150px;
             font-size: 15mm;
             font-weight: bold;
