--- a/jenis.html
+++ b/jenis.html
@@ -83,30 +83,23 @@
                 text-align: center;
             }
             img {
-            width: 100px;
+                width: 100px;
             }
-            td:hover {
-            width: 65%;
-            margin: auto;
-            border: black solid;
-            padding-top: 10px;
-            float: right;
-            margin-right: 0;
-            height: 65%;
-            width: 150px;
-            font-size: 15mm;
-            font-weight: bold;
+            .kandungan td:hover {
+                width: 150px;
+                font-size: 15mm;
+                font-weight: bold;
             }
             .vertical:after {
                 content: "";
                 display: table;
                 clear: both;
             }
-        .kaki {
-            text-align: center;
-            background-color: yellowgreen;
-            border: green solid;
-            padding: 10px;
+           .kaki {
+                text-align: center;
+                background-color: yellowgreen;
+                border: green solid;
+                padding: 10px;
         }
         </style>
     </head>
@@ -142,15 +135,18 @@
                     <th>Harga/kg</th>
                 </tr>
                 <tr>
-                    <td><img src="images/selimut.png"><br>Selimut</td>
+                    <td><img src="images/selimut.png"></td>
+                    Selimut
                     <td>RM10.00</td>
                 </tr>
                 <tr>
-                    <td><img src="images/karpet.png"><br>Karpet</td>
+                    <td><img src="images/karpet.png"></td>
+                    Karpet
                     <td>RM20.00</td>
                 </tr>
                 <tr>
-                    <td><img src="images/pakaian.png"><br>Pakaian</td>
+                    <td><img src="images/pakaian.png"</td>
+                    Pakaian
                     <td>RM6.00</td>
                 </tr>
             </table>
