--- a/jenis.html
+++ b/jenis.html
@@ -135,12 +135,12 @@
                     <th>Harga/kg</th>
                 </tr>
                 <tr>
-                    <td><img src="images/selimut.png"></td>
+                    <td><img src="images/selimut.png"</td>
                     Selimut
                     <td>RM10.00</td>
                 </tr>
                 <tr>
-                    <td><img src="images/karpet.png"></td>
+                    <td><img src="images/karpet.png"</td>
                     Karpet
                     <td>RM20.00</td>
                 </tr>
