--- a/jenis.html
+++ b/jenis.html
@@ -135,17 +135,17 @@
                     <th>Harga/kg</th>
                 </tr>
                 <tr>
-                    <td><img src="images/selimut.png"</td>
+                    <td><img src="images/selimut.png"><br></td>
                     Selimut
                     <td>RM10.00</td>
                 </tr>
                 <tr>
-                    <td><img src="images/karpet.png"</td>
+                    <td><img src="images/karpet.png"><br></td>
                     Karpet
                     <td>RM20.00</td>
                 </tr>
                 <tr>
-                    <td><img src="images/pakaian.png"</td>
+                    <td><img src="images/pakaian.png"><br></td>
                     Pakaian
                     <td>RM6.00</td>
                 </tr>
