--- a/jenis.html
+++ b/jenis.html
@@ -135,18 +135,15 @@
                     <th>Harga/kg</th>
                 </tr>
                 <tr>
-                    <td><img src="images/selimut.png"><br></td>
-                    Selimut
+                    <td><img src="images/selimut.png"><br>Selimut</td>
                     <td>RM10.00</td>
                 </tr>
                 <tr>
-                    <td><img src="images/karpet.png"><br></td>
-                    Karpet
+                    <td><img src="images/karpet.png"><br>Karpet</td>
                     <td>RM20.00</td>
                 </tr>
                 <tr>
-                    <td><img src="images/pakaian.png"><br></td>
-                    Pakaian
+                    <td><img src="images/pakaian.png"><br>Pakaian</td>
                     <td>RM6.00</td>
                 </tr>
             </table>
