--- a/jenis.html
+++ b/jenis.html
@@ -85,6 +85,9 @@
             img {
                 width: 100px;
             }
+            .kandungan img:hover {
+            width: 150px;
+            }
             .vertical:after {
                 content: "";
                 display: table;
