--- a/jenis.html
+++ b/jenis.html
@@ -86,7 +86,7 @@
                 width: 100px;
             }
             .kandungan img:hover {
-            width: 150px;
+            width: 150%;
             }
             .vertical:after {
                 content: "";
