--- a/jenis.html
+++ b/jenis.html
@@ -86,7 +86,11 @@
                 width: 100px;
             }
             .kandungan img:hover {
-            width: 150%;
+            width: 150px;
+            }
+            .kandungan td:hover {
+            font-size: 15mm;
+            font-weight: bold;
             }
             .vertical:after {
                 content: "";
