--- a/jenis.html
+++ b/jenis.html
@@ -85,8 +85,8 @@
             img {
                 width: 100px;
             }
-            .kandungan img:hover {
-                width: 160px;
+            .img:hover {
+                width: 150px;
             }
             .vertical:after {
                 content: "";
