--- a/jenis.html
+++ b/jenis.html
@@ -85,7 +85,7 @@
             img {
                 width: 100px;
             }
-            .img:hover {
+            .kandungan img:hover {
                 width: 150px;
             }
             .vertical:after {
