--- a/jenis.html
+++ b/jenis.html
@@ -138,15 +138,15 @@
                 </tr>
                 <tr>
                     <td><img src="images/selimut.png"><br>Selimut</td>
-                    <td><harga="harga">RM10.00</td>
+                    <td>RM10.00</td>
                 </tr>
                 <tr>
                     <td><img src="images/karpet.png"><br>Karpet</td>
-                    <td><harga="RM20.00"></td>
+                    <td>RM20.00</td>
                 </tr>
                 <tr>
                     <td><img src="images/pakaian.png"><br>Pakaian</td>
-                    <td><harga="RM6.00"></td>
+                    <td class="harga">RM6.00</td>
                 </tr>
             </table>
         </div>
