--- a/jenis.html
+++ b/jenis.html
@@ -88,7 +88,7 @@
             .kandungan img:hover {
                 width: 150px;
             }
-            .kandungan harga:hover {
+            harga:hover {
                 font-size: 15mm;
                 font-weight: bold;
             }
