--- a/jenis.html
+++ b/jenis.html
@@ -88,7 +88,7 @@
             .kandungan img:hover {
                 width: 150px;
             }
-            harga:hover {
+            .kandungan harga:hover {
                 font-size: 15mm;
                 font-weight: bold;
             }
@@ -138,15 +138,15 @@
                 </tr>
                 <tr>
                     <td><img src="images/selimut.png"><br>Selimut</td>
-                    <td><class="harga">RM10.00</td>
+                    <td><div class="harga">RM10.00</div></td>
                 </tr>
                 <tr>
                     <td><img src="images/karpet.png"><br>Karpet</td>
-                    <td><class="harga">RM20.00</td>
+                    <td><div class="harga">RM20.00</div></td>
                 </tr>
                 <tr>
                     <td><img src="images/pakaian.png"><br>Pakaian</td>
-                    <td><class="harga">RM6.00</td>
+                    <td><div class="harga">RM6.00</div></td>
                 </tr>
             </table>
         </div>
